--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -58,6 +58,8 @@
       items:
         - name: Datainsamling
           href: security-center-enable-data-collection.md
+        - name: Avancerad datasäkerhet för IaaS
+          href: security-center-iaas-advanced-data.md
         - name: Inbyggda säkerhetsprinciper
           href: security-center-policy-definitions.md
         - name: E-postmeddelanden
@@ -168,6 +170,8 @@
       href: 'https://docs.microsoft.com/rest/api/securitycenter/'
     - name: Tjänstuppdateringar
       href: 'https://azure.microsoft.com/updates/?product=security-center'
+    - name: Tillbakadragande av funktioner och API (juli 2019)
+      href: security-center-features-retirement-july2019.md
 - name: Resurser
   items:
     - name: Utveckla dina färdigheter med Microsoft Learn
