--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -284,6 +284,8 @@
               href: transparent-data-encryption-azure-sql.md
             - name: TDE med Bring Your Own Key
               href: transparent-data-encryption-byok-azure-sql.md
+        - name: Säkerhetsattribut
+          href: sql-database-security-attributes.md
     - name: Skalbarhet
       items:
         - name: Översikt över skalbarhet
