--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: Vad är Stream Analytics?
       href: stream-analytics-introduction.md
+    - name: Lösningsmönster från slutpunkt till slutpunkt
+      href: stream-analytics-solution-patterns.md
 - name: Snabbstarter
   items:
     - name: Skapa ett jobb – Azure Portal
@@ -12,6 +14,8 @@
       href: stream-analytics-quick-create-powershell.md
     - name: Skapa ett jobb – Visual Studio
       href: stream-analytics-quick-create-vs.md
+    - name: Skapa ett jobb – Visual Studio Code
+      href: quick-create-vs-code.md
 - name: Självstudier
   items:
     - name: 1 – Skapa/hantera ett jobb
@@ -143,7 +147,7 @@
           href: 'https://github.com/Azure/azure-stream-analytics/tree/master/Samples/ASAOneClick'
         - name: Använda API för IoT Edge-jobb
           href: stream-analytics-cicd-api.md
-    - name: Visual Studio-verktyg
+    - name: Visual Studio och VS Code
       items:
         - name: Installera verktygen
           href: stream-analytics-tools-for-visual-studio-install.md
@@ -159,6 +163,8 @@
           href: stream-analytics-tools-for-visual-studio-cicd.md
         - name: Skriva .NET UDF för Edge
           href: stream-analytics-edge-csharp-udf-methods.md
+        - name: Utforska Stream Analytics i VS Code
+          href: vs-code-how-to.md
     - name: Felsöka
       items:
         - name: Indata
@@ -435,6 +441,9 @@
               maintainContext: true
             - name: Rullande fönster
               href: /stream-analytics-query/tumbling-window-azure-stream-analytics
+              maintainContext: true
+            - name: Aggregera fönsterfunktioner
+              href: /stream-analytics-query/windows-azure-stream-analytics
               maintainContext: true
     - name: Datatyper
       items:
