--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -11,10 +11,10 @@ metadata:
   ms.service: search
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 01/18/2019
+  ms.date: 05/02/2019
   ms.author: heidist
 abstract:
-  description: 'Lär dig hur du skapar en söklösning för företag med privat, heterogent innehåll med hjälp av Azure Search. Självstudier, API-referenser och andra dokument visar dig hur du konsoliderar sökbart innehåll till ett enda snabbt frågningsbart index med hjälp av enkel-till-avancerad syntax för en mängd olika scenarier. <p/><a href="/azure/search/cognitive-search-concept-intro"><b>Ny kognitiv förhandsversion för sökning.</b></a> Använd en förhandsversion av REST API för att binda AI-drivna algoritmer för indexering av pipeline. Extrahera data och anropa bearbetning av naturligt språk och bilder för att omvandla ostrukturerat innehåll i råformat till sökbart innehåll i ett Azure Search-index. <p/>Utforska kognitiv sökning med <a href="/azure/search/cognitive-search-quickstart-blob">resurser och exempeldata</a> eller läs mer i <a href="/azure/search/cognitive-search-concept-intro">Koncept</a>.'
+  description: 'Lär dig hur du skapar en söklösning för företag med privat, heterogent innehåll med hjälp av Azure Search. Självstudier, API-referenser och andra dokument visar dig hur du konsoliderar sökbart innehåll till ett enda snabbt frågningsbart index med hjälp av enkel-till-avancerad syntax för en mängd olika scenarier. <p/><a href="/azure/search/cognitive-search-concept-intro"><b>Kognitiv sökning</b></a> är nu allmänt tillgängligt, med stöd för AI-berikanden för produktionsscenarier.<p/><a href="/azure/search/knowledge-store-concept-intro"><b>Knowledge Store (förhandsversion)</b></a> utökar Kognitiv sökning. Lagra AI-berikanden där du kan visa, omvandla och använda berikanden i andra appar än Azure Search. <a href="/azure/search/knowledge-store-howto"><b>Kom igång</b></a> idag.'
   aside:
     image:
       alt: null
@@ -51,11 +51,11 @@ sections:
       - type: list
         style: ordered
         items:
-          - html: <a href="/azure/search/cognitive-search-tutorial-blob">Indexera med AI (Cognitive Services)</a>
-          - html: <a href="/azure/search/search-howto-dotnet-sdk">Så här använder du Azure Search med .NET</a>
+          - html: <a href="/azure/search/search-get-started-portal">Använda portalen för indexering och frågetestning</a>
+          - html: <a href="/azure/search/search-howto-dotnet-sdk">Använd .NET för att skriva din första söklösning</a>
+          - html: <a href="/azure/search/cognitive-search-tutorial-blob">Berika med AI (Cognitive Services)</a>
           - html: <a href="/azure/search/search-indexer-tutorial">Indexera Azure SQL Database-innehåll med .NET</a>
           - html: <a href="/azure/search/search-semi-structured-data">Indexera halvstrukturerade data i Azure Blob Storage med REST</a>
-          - html: <a href="/azure/search/search-get-started-portal">Använda portalen för indexering och frågetestning</a>
   - title: Referens
     items:
       - type: list
