--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -237,6 +237,8 @@
               href: msal-js-prompt-behavior.md
             - name: Ange din egen HttpClient (.NET)
               href: msal-net-provide-httpclient.md
+            - name: Integrera med Azure AD B2C
+              href: msal-b2c-overview.md
             - name: Plattformsspecifika överväganden (.NET)
               items:
                 - name: Webbläsare
