--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -126,7 +126,7 @@
       href: ../translator/tutorial-build-flask-app-translation-synthesis.md?toc=%2fazure%2fcognitive-services%2fspeech-service%2ftoc.json&bc=%2fazure%2fcognitive-services%2fspeech-service%2fbreadcrumb%2ftoc.json
 - name: Begrepp
   items:
-    - name: Tjänst för samtalstranskription
+    - name: Samtalstranskription
       href: conversation-transcription-service.md
     - name: Avskrifter av kundtjänst
       href: call-center-transcription.md
