--- a/articles/stream-analytics/index.yml
+++ b/articles/stream-analytics/index.yml
@@ -9,8 +9,7 @@ metadata:
   ms.author: mamccrea
   ms.service: stream-analytics
   ms.topic: landing-page
-  ms.date: 12/06/2018
-  ms.custom: seodec18
+  ms.date: 05/08/2019
 abstract:
   description: 'Stream Analytics är en fullständigt hanterad, serverlös händelsebearbetningsmotor som gör det möjligt att analysera dataströmmar från program och IoT-enheter i realtid. Lär dig hur du använder Azure Stream Analytics med hjälp av våra snabbstarter, självstudier och exempel.'
   aside:
@@ -42,6 +41,10 @@ sections:
               src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
             text: Visual Studio
             href: 'https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-vs'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_vs-code.svg'
+            text: Visual Studio-koden
+            href: 'https://docs.microsoft.com/azure/stream-analytics/quick-create-vs-code'
   - title: Steg för steg-självstudier
     items:
       - type: paragraph
