--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -139,8 +139,8 @@
       displayName: 'recognize speech, speech recognition, speech-to-text, stt'
     - name: Använda ljudindataströmmar (SDK)
       href: how-to-use-audio-input-streams.md
-    - name: Använda komprimerade ljudindataströmmar (SDK)
-      href: how-to-use-compressed-audio-input-streams.md
+    - name: Använda codec-komprimerade ljudindataströmmar (SDK)
+      href: how-to-use-codec-compressed-audio-input-streams.md
       displayName: 'mp3, opus, ogg, flac'
     - name: Välj enhet för ljudinspelning (SDK)
       href: how-to-select-audio-input-devices.md
@@ -184,7 +184,7 @@
               href: record-custom-voice-samples.md
             - name: Finjustera text till tal-utdata
               href: how-to-voice-tuning.md
-        - name: Skapa ett anpassat aktiveringsord (SDK för enheter)
+        - name: Skapa ett anpassat väckningsord (nyckelordsidentifiering)
           href: speech-devices-sdk-create-kws.md
           displayName: 'roobo, speech devices sdk, wake word, keyword spotting, kws'
     - name: Migrering
@@ -195,9 +195,9 @@
           href: how-to-migrate-from-custom-speech-service.md
         - name: 'Från Translator Speech API:et'
           href: how-to-migrate-from-translator-speech-api.md
-    - name: Använda containrar
+    - name: Använda lokala containrar
       items:
-        - name: Installera och köra containrar
+        - name: Installera och köra lokala containrar
           displayName: 'docker, container, package, packaged app, swagger, open api, openapi, train, publish, az, acr, cli, tps, core, curl, try it now, import, pull'
           href: speech-container-howto.md
         - name: Konfigurera containrar
@@ -220,6 +220,8 @@
         - name: Översikt
           href: speech-sdk.md
           displayName: 'C#, C++, Java, .NET, .NET Core, UWP, Android, Linux, Windows'
+        - name: Scenariotillgänglighet
+          href: scenario-availability.md
         - name: Viktig information
           href: releasenotes.md
         - name: C++
@@ -255,6 +257,9 @@
         - name: Batch-transkription och anpassning
           href: 'https://westus.cris.ai/swagger/ui/index'
           displayName: 'Batch transcription, transcription, custom models, customization, model management'
+        - name: Samtalstranskription
+          href: 'https://signature.centralus.cts.speech.microsoft.com/UI/index.html'
+          displayName: 'Conversation transcription, signature generation'
         - name: Webhooks
           href: webhooks.md
           displayName: Webhooks
