--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -149,6 +149,8 @@
           href: iot-hub-devguide-sdks.md
         - name: MQTT-support
           href: iot-hub-mqtt-support.md
+        - name: Stöd för AMQP
+          href: iot-hub-amqp-support.md
         - name: Ordlista
           href: iot-hub-devguide-glossary.md
     - name: Säkerhet
