--- a/articles/logic-apps/index.yml
+++ b/articles/logic-apps/index.yml
@@ -19,7 +19,7 @@ sections:
   - title: Snabbstarter på 5 minuter
     items:
       - type: paragraph
-        text: Lär dig hur du skapar en logikapp i Azure.
+        text: Lär dig hur du skapar en logikapp som körs i Azure.
       - type: list
         style: icon48
         items:
@@ -27,7 +27,15 @@ sections:
               src: 'https://docs.microsoft.com/media/common/i_portal.svg'
             text: Azure Portal
             href: /azure/logic-apps/quickstart-create-first-logic-app-workflow
-  - title: Stegvisa självstudier
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            text: Visual Studio
+            href: /azure/logic-apps/quickstart-create-logic-apps-with-visual-studio
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_vs-code.svg'
+            text: Visual Studio-koden
+            href: /azure/logic-apps/quickstart-create-logic-apps-visual-studio-code
+  - title: Steg för steg-självstudier
     items:
       - type: paragraph
         text: 'Lär dig hur du skapar logikappar som körs enligt ett schema och integrerar data i olika Azure-tjänster, Microsoft-tjänster och andra SaaS-appar (programvara som en tjänst).'
